[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/login.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]
Panel/colors/ = Color( 0.396078, 0.0705882, 0.0705882, 1 )

[node name="Login" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.5
margin_top = -133.75
margin_right = 184.5
margin_bottom = 133.75
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -30.0
margin_right = 100.0
margin_bottom = 30.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameField" type="LineEdit" parent="Rows"]
margin_right = 200.0
margin_bottom = 24.0
size_flags_vertical = 3
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Rows"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Rows"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0.839216, 0, 0, 1 )
[connection signal="text_entered" from="Rows/UsernameField" to="." method="_on_UsernameField_text_entered"]
[connection signal="pressed" from="Rows/Button" to="." method="_on_Button_pressed"]
